# motorDriver

dcMotor/motorDriver.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-variables.mk  configurations.xml  project.xml
dcMotor/motorDriver.X/nbproject/private/: private.xml
dcMotor/motorDriver.X/source/: DEEEmulation.h  adc.c  can.c  can.h  dma.c  doxy2DsPic.config  initIO.c  initIO.h  main.c  motorControl.c  motorControl.h  pwm.c  pwm.h  spiFunctions.c  spiFunctions.h  timers.c  timers.h
dcMotor/schematic/: dcMotorDriverPcb.sch
dcMotorCANInterface/source/: CMakeLists.txt  main.cpp  muscleDriverCANInterface.cpp  muscleDriverCANInterface.h
dcMotorUARTConfiguration/source/: CMakeLists.txt  SerialCommunication.cpp  SerialCommunication.h  configDataHandling.cpp  configDataHandling.h  main.cpp
dcMotorV3/motorDriver.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  configurations.xml  project.xml
dcMotorV3/motorDriver.X/nbproject/private/: configurations.xml
dcMotorV3/motorDriver.X/source/: DEEEmulation.c  adc.c  adc.h  can.c  can.h  dma.c  dma.h  initIO.c  initIO.h  main.c  motorControl.c  motorControl.h  pwm.c  qei.c  qei.h  serialPortFunctions.c  serialPortFunctions.h  spiFunctions.c  spiFunctions.h  timers.c
dcMotorViaNewGanglionUSBInterfaceTest/source/: CMakeLists.txt  FlexRayUSBInterface.cpp  FlexRayUSBInterface.h  UserInterface.h  WinTypes.h  main.cpp
dcMotorViaNewGanglionUSBInterfaceTest/source/legacyFlexRayForEPCard/: FlexRay.cpp  FlexRay.h  TEST.chi  TransmitFrame.h  Util.cpp  Util.h
motorDriverBoardConfiguration/source/: CMakeLists.txt  can.cpp  can.h  canConfigLoader.cpp  canConfigLoader.h  configDataHandling.cpp  configDataHandling.h  main.cpp
